# mammodino-dbt-ssl

./: .gitignore  README.md  pyproject.toml  requirements_py312_clean_freeze.txt
configs/: dino_dbt.yaml  dino_dbt_docker_smoke.yaml  dino_dbt_smoke.yaml
docker/: Dockerfile.ddp  README.md  ddp_cuda_smoke.py  run_docker_checks.sh
docs/: COMPARISON_SUMMARY.md  IBOT_VS_DINO_NEW_DESIGN.md  IMAGENET_VS_DINOFULL_STAGED.md  LIRON_DINO_FULL_REDESIGN.md  VITSMALL_SCALE_AND_IBOT.md
experiments/dbt_cross_slice_transformer/: README.md
experiments/dino_full_ibot/: dino_dbt_full_vitsmall.yaml  dino_full_ibot_module.py  ibot_patch_loss.py  train_dino_full_ibot.py
experiments/dino_ibot/: eval_attention_pool_with_roc.py
experiments/dino_only/: dino_only.yaml
experiments/imagenet_baseline/: imagenet_mil_eval.py  plot_imagenet_results.py
experiments/imagenet_staged/: extract_imagenet_stage0.py
plots/ibot_new_design/: dino_ibot_new_stage1_metrics.json  dino_ibot_new_stage2_metrics.json  dino_ibot_new_stage3_metrics.json  dino_ibot_new_stage7_metrics.json  dino_only_new_stage1_metrics.json  dino_only_new_stage2_metrics.json  dino_only_new_stage3_metrics.json  dino_only_new_stage7_metrics.json
scripts/: baseline_logreg_embeddings_dbt.py  baseline_patient_pool_embeddings_dbt.py  eval_probe_confusion_dbt.py  launch_dino_probe_bundle.sh  plot_dino_loss.py  plot_probe_results.py  run_toy_dino_cifar10.py  train_dino.py  train_linear_probe_dbt.py
src/mammodino_ssl/: __init__.py
tests/: conftest.py  test_dbt_dino_dataset.py  test_dbt_dino_one_step.py  test_dino_toy_forward.py
(+48 files in other folders)
